--- a/index.html
+++ b/index.html
@@ -80,43 +80,39 @@
                 <div class="cont-temas">
                     <ul>
                         <li class="temas" data-pagina="1">
-                            <i class='bx bx-square-rounded' ></i> 
+                            <i class='bx bx-square-rounded'></i> 
                             <p>Bienvenida</p>
                         </li>
                         <li class="temas" data-pagina="2">
-                            <i class='bx bx-square-rounded' ></i> 
+                            <i class='bx bx-square-rounded'></i> 
                             <p>Introducción</p>
                         </li>
                         <li class="temas" data-pagina="3">
-                            <i class='bx bx-square-rounded' ></i> 
-                            <p>La nueva forma de hacer seguridad (CISO)</p>
+                            <i class='bx bx-square-rounded'></i> 
+                            <p>Objetivo</p>
                         </li>
                         <li class="temas" data-pagina="4">
-                            <i class='bx bx-square-rounded' ></i> 
-                            <p>Sistema de Gestión de Seguridad de la Información</p>
-                        </li>
-                        <li class="temas" data-pagina="5">
-                            <i class='bx bx-square-rounded' ></i> 
-                            <p>Controles Fundamentales</p>
+                            <i class='bx bx-square-rounded'></i> 
+                            <p>¿Qué es la OEA?</p>
                         </li>
                         <li class="temas" data-pagina="6">
-                            <i class='bx bx-square-rounded' ></i> 
-                            <p>Controles de Seguridad Informática</p>
-                        </li>
-                        <li class="temas" data-pagina="7">
-                            <i class='bx bx-square-rounded' ></i> 
-                            <p>Modelo de Seguridad de la Información</p>
-                        </li>
-                        <li class="temas" data-pagina="8">
-                            <i class='bx bx-square-rounded' ></i> 
-                            <p>Políticas de Seguridad de la Información</p>
-                        </li>
-                        <li class="temas" data-pagina="9">
-                            <i class='bx bx-square-rounded' ></i> 
-                            <p>Actividad de reforzamiento</p>
+                            <i class='bx bx-square-rounded'></i> 
+                            <p>Situaciones que amenazan tu seguridad y como denunciar</p>
                         </li>
                         <li class="temas" data-pagina="10">
-                            <i class='bx bx-square-rounded' ></i> 
+                            <i class='bx bx-square-rounded'></i> 
+                            <p>Proceso de denuncia</p>
+                        </li>
+                        <li class="temas" data-pagina="11">
+                            <i class='bx bx-square-rounded'></i> 
+                            <p>Confidencialidad</p>
+                        </li>
+                        <li class="temas" data-pagina="12">
+                            <i class='bx bx-square-rounded'></i> 
+                            <p>Evaluación final</p>
+                        </li>
+                        <li class="temas" data-pagina="13">
+                            <i class='bx bx-square-rounded'></i> 
                             <p>Cierre</p>
                         </li>    
                     </ul>
